build/test/lib/errors/not-implemented.mjs
export const name = "NotImplemented";
export function createNotImplementedError(message) {
    return new Error(name);
}
